# pymmcore-proxy

./: LICENSE  README.md  pyproject.toml
scripts/: run_compat_tests.py
src/pymmcore_proxy/: __init__.py  _serialize.py  client.py  server.py
tests/: conftest.py  test_log_forwarding.py  test_mda.py  test_rpc.py  test_serialize.py  test_signals.py
