[project]
name = "pymmcore-proxy"
version = "0.1.0"
description = "Network proxy for pymmcore-plus — control microscopes remotely"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Lucien Hinderling", email = "lucien.hinderling@unibe.ch" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "httpx",
    "starlette",
    "uvicorn",
    "websockets",
    "psygnal>=0.9",
    "useq-schema",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pymmcore-plus",
]
server = [
    "pymmcore-plus",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pymmcore_proxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
